<resources>
    <string name="app_name">Widgetionary English</string>
    <string name="no_matches_found">No matches found!</string>
    <string name="q">Q</string>
    <string name="w">W</string>
    <string name="e">E</string>
    <string name="r">R</string>
    <string name="t">T</string>
    <string name="y">Y</string>
    <string name="u">U</string>
    <string name="i">I</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="a">A</string>
    <string name="s">S</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="clear">clear</string>
    <string name="z">Z</string>
    <string name="x">X</string>
    <string name="c">C</string>
    <string name="v">V</string>
    <string name="b">B</string>
    <string name="n">N</string>
    <string name="m">M</string>
    <string name="back">back</string>
    <string name="info">Fast access to dictionary?\nOnly Widgetionary!\n\nSimply add widget to Your screen and use it.</string>
    <string name="link">facebook.com/maciejprogamuje</string>
    <string name="enter_longer_word">"Enter a word!\n\n\nWidgetionary English\n\nfacebook.com\\maciejprogramuje\n"</string>
    <string name="flag">flag</string>
    <string name="logo">logo</string>
    <string name="legalnotice">The origin of the content comes from https://www.slowniki.eu/\n\nDictionaries have Creative Commons License:\nhttps://creativecommons.org/licenses/by-sa/3.0/deed.pl</string>
</resources>
